pgadmin/pgadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: wiki
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pgadmin
