pgadmin/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
  name: nginx
  namespace: wiki
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: wiki
spec:
  ingressClassName: nginx
  rules:
  - host: pgadmin.luma
    http:
      paths:
      - backend:
          service:
            name: pgadmin-service
            port:
              number: 80
        path: /
        pathType: Prefix
